cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
cmake_policy(VERSION 2.6)

project(glslang)
enable_testing()

set(TARGET_GLSLANG glslang)
set(TARGET_STANDALONE glslangValidator)

if(WIN32)
	if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
		set(INSTALL_DIRECTORY "Windows64" )
	else( CMAKE_SIZEOF_VOID_P EQUAL 8 )
		set(INSTALL_DIRECTORY "Windows" )
	endif( CMAKE_SIZEOF_VOID_P EQUAL 8 )
elseif(APPLE)
	if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
		set(INSTALL_DIRECTORY "MacOS64" )
	else( CMAKE_SIZEOF_VOID_P EQUAL 8 )
		set(INSTALL_DIRECTORY "MacOS" )
	endif( CMAKE_SIZEOF_VOID_P EQUAL 8 )
else() # Linux
	if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
		set(INSTALL_DIRECTORY "Linux64" )
	else( CMAKE_SIZEOF_VOID_P EQUAL 8 )
		set(INSTALL_DIRECTORY "Linux" )
	endif( CMAKE_SIZEOF_VOID_P EQUAL 8 )
endif()

add_subdirectory(glslang)
add_subdirectory(StandAlone)
