file(GLOB ROOT_SOURCE *.cpp)
file(GLOB ROOT_HEADER *.hpp *.inl *.h)
file(GLOB ROOT_CODEGEN ../glslang/GenericCodeGen/*.cpp ../glslang/GenericCodeGen/*.h)
file(GLOB ROOT_OGLCOMPILIER ../OGLCompilersDLL/*.cpp ../OGLCompilersDLL/*.h)

source_group("GL Compilier Files" FILES ${ROOT_OGLCOMPILIER})

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/glslang/public)

if(WIN32)
	if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
		set(INSTALL_DIRECTORY "Windows64" )
	else( CMAKE_SIZEOF_VOID_P EQUAL 8 )
		set(INSTALL_DIRECTORY "Windows" )
	endif( CMAKE_SIZEOF_VOID_P EQUAL 8 )
elseif(APPLE)
	if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
		set(INSTALL_DIRECTORY "MacOS64" )
	else( CMAKE_SIZEOF_VOID_P EQUAL 8 )
		set(INSTALL_DIRECTORY "MacOS" )
	endif( CMAKE_SIZEOF_VOID_P EQUAL 8 )
else() # Linux
	if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
		set(INSTALL_DIRECTORY "Linux64" )
	else( CMAKE_SIZEOF_VOID_P EQUAL 8 )
		set(INSTALL_DIRECTORY "Linux" )
	endif( CMAKE_SIZEOF_VOID_P EQUAL 8 )
endif()

message(${CMAKE_CURRENT_SOURCE_DIR}/../Install/${INSTALL_DIRECTORY})
message(${CMAKE_CURRENT_BINARY_DIR}/${TARGET_STANDALONE})

add_executable(${TARGET_STANDALONE} ${ROOT_SOURCE} ${ROOT_HEADER} ${ROOT_CODEGEN} ${ROOT_OGLCOMPILIER})
add_custom_command(
	TARGET ${TARGET_STANDALONE} POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE_DIR:${TARGET_STANDALONE}>/${TARGET_STANDALONE} ${CMAKE_CURRENT_SOURCE_DIR}/../Install/${INSTALL_DIRECTORY})
#set_target_properties(${TARGET_STANDALONE} PROPERTIES
#	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../Install/${INSTALL_DIRECTORY}
#	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../Install/${INSTALL_DIRECTORY})

target_link_libraries(${TARGET_STANDALONE} ${TARGET_GLSLANG} ${BINARY_FILES})

install(TARGETS ${TARGET_STANDALONE}
	RUNTIME DESTINATION Debug/bin/${TARGET_STANDALONE}
	LIBRARY DESTINATION Debug/lib/${TARGET_STANDALONE}
	CONFIGURATIONS Debug)
install(TARGETS ${TARGET_STANDALONE}
	RUNTIME DESTINATION Release/bin/${TARGET_STANDALONE}
	LIBRARY DESTINATION Release/lib/${TARGET_STANDALONE}
	CONFIGURATIONS Release)
