find_package(Threads REQUIRED)

file(GLOB ROOT_SOURCE *.cpp)
file(GLOB ROOT_HEADER *.hpp *.inl *.h)
file(GLOB ROOT_CODEGEN ../glslang/GenericCodeGen/*.cpp ../glslang/GenericCodeGen/*.h)
file(GLOB ROOT_OGLCOMPILIER ../OGLCompilersDLL/*.cpp ../OGLCompilersDLL/*.h)

source_group("GL Compilier Files" FILES ${ROOT_OGLCOMPILIER})

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/glslang/public)

add_executable(${TARGET_STANDALONE} ${ROOT_SOURCE} ${ROOT_HEADER} ${ROOT_CODEGEN} ${ROOT_OGLCOMPILIER})
add_custom_command(
	TARGET ${TARGET_STANDALONE} POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:${TARGET_STANDALONE}> ${CMAKE_CURRENT_SOURCE_DIR}/../Install/${INSTALL_DIRECTORY})

target_link_libraries(${TARGET_STANDALONE} ${TARGET_GLSLANG} ${BINARY_FILES} ${CMAKE_THREAD_LIBS_INIT})

install(TARGETS ${TARGET_STANDALONE}
	RUNTIME DESTINATION Debug/bin/${TARGET_STANDALONE}
	LIBRARY DESTINATION Debug/lib/${TARGET_STANDALONE}
	CONFIGURATIONS Debug)
install(TARGETS ${TARGET_STANDALONE}
	RUNTIME DESTINATION Release/bin/${TARGET_STANDALONE}
	LIBRARY DESTINATION Release/lib/${TARGET_STANDALONE}
	CONFIGURATIONS Release)
